<resources>
    <string name="app_name">Github Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="test_text">Este es un texto de prueba</string>
    <string name="repo_name">Nombre del repositorio</string>
    <string name="repo_description">Descripción del repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="text_lang">Kotlin</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="owner_avatar_description">Avatar del propietario del repositorio</string>
    <string name="edit_button_description">Botón para editar el repositorio</string>
    <string name="delete_button_description">Botón para eliminar el repositorio</string>
</resources>