<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RepoItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Columna 1: Avatar y Botones -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/report_owner_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/owner_avatar_description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageButton
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:contentDescription="@string/edit_button_description" />

                <ImageButton
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/delete_button_description" />
            </LinearLayout>
        </LinearLayout>

        <!-- Columna 2: Información del Repositorio -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_name"
                    android:padding="8dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text"
                    android:padding="8dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_description"
                    android:padding="8dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/repo_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/repo_description"
                    android:padding="8dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_lang"
                    android:padding="8dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/repo_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_lang"
                    android:padding="8dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>